<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/lbl_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtValor1" />

    <TextView
        android:text="@string/lbl_valor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtValor2" />

    <Button
        android:text="@string/lbl_adicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdicao" />

    <Button
        android:text="@string/lbl_subtracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubtracao" />

    <Button
        android:text="@string/lbl_divisao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDivisao" />

    <Button
        android:text="@string/lbl_multiplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMultiplicacao" />

    <Button
        android:text="@string/lbl_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalcular"
        android:layout_gravity="center" />
</LinearLayout>
